Fixed z-index for navbar

--- a/src/scss/NavBarSearchBar.scss
+++ b/src/scss/NavBarSearchBar.scss
@@ -1,6 +1,7 @@
 @import "config";
 
 .navbar-searchbar {
+  width: 100%;
   .search-bar__form {
     padding: 0;
     margin: 0;
