--- a/src/scss/RecipesDashboardButton.scss
+++ b/src/scss/RecipesDashboardButton.scss
@@ -3,7 +3,7 @@
 .recipeDashboard__button {
   position: fixed !important;
   right: -5rem;
-  top: 1rem;
+  top: 0.78rem;
   z-index: 1021;
   @include transition-ease-in-out;
 
